--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,13 @@
 <!-- header -->
 <div class="banner">
 	<div class="container">
-		<div class="header">
-			<div class="logo">
-				<h2><a href="{% url 'index' %}">BG的个人博客</a></h2>
-			</div>
-			<div class="header-right">
-				<ul>
-				<li>
+{#		<div class="header">#}
+{#			<div class="logo">#}
+{#				<h2><a href="{% url 'index' %}">BG的个人博客</a></h2>#}
+{#			</div>#}
+{#			<div class="header-right">#}
+{#				<ul>#}
+{#				<li>#}
 {#				    <div class="search2">#}
 {#					<form>#}
 {#                        {% csrf_token %}#}
@@ -38,52 +38,52 @@
 {#						<input type="submit" value="">#}
 {#					</form>#}
 {#				</div></li>#}
-					<div class="clearfix"></div>
-				</ul>
-
-			</div>
-				<div class="clearfix"> </div>
-			</div>
-				<div class="head-nav">
-					<span class="menu"> </span>
-						<ul class="cl-effect-15">
-						    <li class={% if request.path == '/' %}"active"{% endif %}><a href="{% url 'index' %}">首页</a></li>
-							<li class={% if request.path|slice:"9" == '/articles' %}"active"{% endif %}><a href="{% url 'index' %}">笔记</a></li>
-							<li class={% if request.path|slice:"6" == '/crawl' %}"active"{% endif %}><a href="{% url 'mycrawl' %}">爬虫</a></li>
-							<li class={% if request.path|slice:"5" == '/self' %}"active"{% endif %}><a href="{% url 'myself' %}">关于自己</a></li>
-						</ul>
-                        <div class="clearfix"> </div>
-				</div>
-						<!-- script-for-nav -->
-					<script>
-						$( "span.menu" ).click(function() {
-						  $( ".head-nav ul" ).slideToggle(300, function() {
-							// Animation complete.
-						  });
-						});
-					</script>
-				<!-- script-for-nav -->
+{#					<div class="clearfix"></div>#}
+{#				</ul>#}
+{##}
+{#			</div>#}
+{#				<div class="clearfix"> </div>#}
+{#			</div>#}
+        <div class="head-nav">
+            <span class="menu"> </span>
+            <ul class="cl-effect-15">
+                <li class={% if request.path == '/' %}"active"{% endif %}><a href="{% url 'index' %}">首页</a></li>
+                <li class={% if request.path|slice:"9" == '/articles' %}"active"{% endif %}><a href="{% url 'index' %}">笔记</a></li>
+                <li class={% if request.path|slice:"6" == '/crawl' %}"active"{% endif %}><a href="{% url 'mycrawl' %}">爬虫</a></li>
+                <li class={% if request.path|slice:"5" == '/self' %}"active"{% endif %}><a href="{% url 'myself' %}">关于自己</a></li>
+            </ul>
+            <div class="clearfix"> </div>
+        </div>
+        <!-- script-for-nav -->
+        <script>
+            $( "span.menu" ).click(function() {
+              $( ".head-nav ul" ).slideToggle(300, function() {
+                // Animation complete.
+              });
+            });
+        </script>
+        <!-- script-for-nav -->
 	</div>
 </div>
 <!-- header -->
 {% block content %}
 {% endblock %}
 <!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="col-md-4 col-md-offset-4 copy">
-                <div class="top1" style="text-indent: 15%">
-                    <i class="ham"></i>
-                </div>
-				<div class="top2" style="text-indent: -10%">
-					<h6 style="text-align: center">Copyrights © 2018 FanQiePy</h6>
-					<p style="text-align: center">All rights reserved</p>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
+{#	<div class="footer">#}
+{#		<div class="container">#}
+{#			<div class="col-md-4 col-md-offset-4 copy">#}
+{#                <div class="top1" style="text-indent: 15%">#}
+{#                    <i class="ham"></i>#}
+{#                </div>#}
+{#				<div class="top2" style="text-indent: -10%">#}
+{#					<h6 style="text-align: center">Copyrights © 2018 FanQiePy</h6>#}
+{#					<p style="text-align: center">All rights reserved</p>#}
+{#				</div>#}
+{#				<div class="clearfix"> </div>#}
+{#			</div>#}
+{#			<div class="clearfix"> </div>#}
+{#		</div>#}
+{#	</div>#}
 <!-- footer -->
 {% block foot_script %}
 {% endblock %}
